@@ -147,6 +147,9 @@
 			RelativePath=".\module.c">
 		</File>
 		<File
+			RelativePath=".\process.c">
+		</File>
+		<File
 			RelativePath=".\random.c">
 		</File>
 		<File
